// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`preserves CoCalc parser and HTML output: 0 1`] = `
{
  "lines": [
    "# Result",
    "",
    "Inline $x_1^2$ and \\(\\frac{1}{2}\\).",
    "",
    "\\[",
    "\\sum_{i=1}^n i",
    "\\]",
    "",
    "\\begin{equation}x=2\\end{equation}",
  ],
  "tokens": [
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": [
        0,
        1,
      ],
      "markup": "#",
      "meta": null,
      "nesting": 1,
      "tag": "h1",
      "type": "heading_open",
    },
    {
      "attrs": null,
      "block": true,
      "children": [
        {
          "attrs": null,
          "block": false,
          "children": null,
          "content": "Result",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "",
          "meta": null,
          "nesting": 0,
          "tag": "",
          "type": "text",
        },
      ],
      "content": "Result",
      "hidden": false,
      "info": "",
      "level": 1,
      "map": [
        0,
        1,
      ],
      "markup": "",
      "meta": null,
      "nesting": 0,
      "tag": "",
      "type": "inline",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": null,
      "markup": "#",
      "meta": null,
      "nesting": -1,
      "tag": "h1",
      "type": "heading_close",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": [
        2,
        3,
      ],
      "markup": "",
      "meta": null,
      "nesting": 1,
      "tag": "p",
      "type": "paragraph_open",
    },
    {
      "attrs": null,
      "block": true,
      "children": [
        {
          "attrs": null,
          "block": false,
          "children": null,
          "content": "Inline ",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "",
          "meta": null,
          "nesting": 0,
          "tag": "",
          "type": "text",
        },
        {
          "attrs": null,
          "block": false,
          "children": null,
          "content": "x_1^2",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "$",
          "meta": null,
          "nesting": 0,
          "tag": "math",
          "type": "math_inline",
        },
        {
          "attrs": null,
          "block": false,
          "children": null,
          "content": " and ",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "",
          "meta": null,
          "nesting": 0,
          "tag": "",
          "type": "text",
        },
        {
          "attrs": null,
          "block": false,
          "children": null,
          "content": "\\frac{1}{2}",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "\\(",
          "meta": null,
          "nesting": 0,
          "tag": "math",
          "type": "math_inline",
        },
        {
          "attrs": null,
          "block": false,
          "children": null,
          "content": ".",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "",
          "meta": null,
          "nesting": 0,
          "tag": "",
          "type": "text",
        },
      ],
      "content": "Inline $x_1^2$ and \\(\\frac{1}{2}\\).",
      "hidden": false,
      "info": "",
      "level": 1,
      "map": [
        2,
        3,
      ],
      "markup": "",
      "meta": null,
      "nesting": 0,
      "tag": "",
      "type": "inline",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": -1,
      "tag": "p",
      "type": "paragraph_close",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "
\\sum_{i=1}^n i
",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": [
        4,
        7,
      ],
      "markup": "",
      "meta": null,
      "nesting": 0,
      "tag": "\\[",
      "type": "math_block",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "\\begin{equation}x=2\\end{equation}",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": [
        8,
        9,
      ],
      "markup": "",
      "meta": null,
      "nesting": 0,
      "tag": "\\",
      "type": "math_block",
    },
  ],
}
`;

exports[`preserves CoCalc parser and HTML output: 0 2`] = `
"<h1>Result</h1>
<p>Inline <script type="math/tex">x_1^2</script> and <script type="math/tex">\\frac{1}{2}</script>.</p>
<script type="math/tex; mode=display">
\\sum_{i=1}^n i
</script><script type="math/tex; mode=display">\\begin{equation}x=2\\end{equation}</script>"
`;

exports[`preserves CoCalc parser and HTML output: 1 1`] = `
{
  "lines": [
    "",
    "",
    "1. Parent",
    "   - child",
    "2. Next",
    "",
    "- [x] done",
    "- [ ] next",
    "",
    "#topic :smile:",
    "",
    "[guide][ref]",
    "",
    "[ref]: https://example.com "Guide"",
  ],
  "meta": "title: Demo",
  "references": {
    "REF": {
      "href": "https://example.com",
      "title": "Guide",
    },
  },
  "tokens": [
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": [
        0,
        1,
      ],
      "markup": "",
      "meta": null,
      "nesting": 0,
      "tag": "p",
      "type": "blank_line",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": [
        1,
        2,
      ],
      "markup": "",
      "meta": null,
      "nesting": 0,
      "tag": "p",
      "type": "blank_line",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": [
        2,
        6,
      ],
      "markup": ".",
      "meta": null,
      "nesting": 1,
      "tag": "ol",
      "type": "ordered_list_open",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "1",
      "level": 1,
      "map": [
        2,
        4,
      ],
      "markup": ".",
      "meta": null,
      "nesting": 1,
      "tag": "li",
      "type": "list_item_open",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": true,
      "info": "",
      "level": 2,
      "map": [
        2,
        3,
      ],
      "markup": "",
      "meta": null,
      "nesting": 1,
      "tag": "p",
      "type": "paragraph_open",
    },
    {
      "attrs": null,
      "block": true,
      "children": [
        {
          "attrs": null,
          "block": false,
          "children": null,
          "content": "Parent",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "",
          "meta": null,
          "nesting": 0,
          "tag": "",
          "type": "text",
        },
      ],
      "content": "Parent",
      "hidden": false,
      "info": "",
      "level": 3,
      "map": [
        2,
        3,
      ],
      "markup": "",
      "meta": null,
      "nesting": 0,
      "tag": "",
      "type": "inline",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": true,
      "info": "",
      "level": 2,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": -1,
      "tag": "p",
      "type": "paragraph_close",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 2,
      "map": [
        3,
        4,
      ],
      "markup": "-",
      "meta": null,
      "nesting": 1,
      "tag": "ul",
      "type": "bullet_list_open",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 3,
      "map": [
        3,
        4,
      ],
      "markup": "-",
      "meta": null,
      "nesting": 1,
      "tag": "li",
      "type": "list_item_open",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": true,
      "info": "",
      "level": 4,
      "map": [
        3,
        4,
      ],
      "markup": "",
      "meta": null,
      "nesting": 1,
      "tag": "p",
      "type": "paragraph_open",
    },
    {
      "attrs": null,
      "block": true,
      "children": [
        {
          "attrs": null,
          "block": false,
          "children": null,
          "content": "child",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "",
          "meta": null,
          "nesting": 0,
          "tag": "",
          "type": "text",
        },
      ],
      "content": "child",
      "hidden": false,
      "info": "",
      "level": 5,
      "map": [
        3,
        4,
      ],
      "markup": "",
      "meta": null,
      "nesting": 0,
      "tag": "",
      "type": "inline",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": true,
      "info": "",
      "level": 4,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": -1,
      "tag": "p",
      "type": "paragraph_close",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 3,
      "map": null,
      "markup": "-",
      "meta": null,
      "nesting": -1,
      "tag": "li",
      "type": "list_item_close",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 2,
      "map": null,
      "markup": "-",
      "meta": null,
      "nesting": -1,
      "tag": "ul",
      "type": "bullet_list_close",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 1,
      "map": null,
      "markup": ".",
      "meta": null,
      "nesting": -1,
      "tag": "li",
      "type": "list_item_close",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "2",
      "level": 1,
      "map": [
        4,
        6,
      ],
      "markup": ".",
      "meta": null,
      "nesting": 1,
      "tag": "li",
      "type": "list_item_open",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": true,
      "info": "",
      "level": 2,
      "map": [
        4,
        5,
      ],
      "markup": "",
      "meta": null,
      "nesting": 1,
      "tag": "p",
      "type": "paragraph_open",
    },
    {
      "attrs": null,
      "block": true,
      "children": [
        {
          "attrs": null,
          "block": false,
          "children": null,
          "content": "Next",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "",
          "meta": null,
          "nesting": 0,
          "tag": "",
          "type": "text",
        },
      ],
      "content": "Next",
      "hidden": false,
      "info": "",
      "level": 3,
      "map": [
        4,
        5,
      ],
      "markup": "",
      "meta": null,
      "nesting": 0,
      "tag": "",
      "type": "inline",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": true,
      "info": "",
      "level": 2,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": -1,
      "tag": "p",
      "type": "paragraph_close",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 1,
      "map": null,
      "markup": ".",
      "meta": null,
      "nesting": -1,
      "tag": "li",
      "type": "list_item_close",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": null,
      "markup": ".",
      "meta": null,
      "nesting": -1,
      "tag": "ol",
      "type": "ordered_list_close",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": [
        6,
        9,
      ],
      "markup": "-",
      "meta": null,
      "nesting": 1,
      "tag": "ul",
      "type": "bullet_list_open",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 1,
      "map": [
        6,
        7,
      ],
      "markup": "-",
      "meta": null,
      "nesting": 1,
      "tag": "li",
      "type": "list_item_open",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": true,
      "info": "",
      "level": 2,
      "map": [
        6,
        7,
      ],
      "markup": "",
      "meta": null,
      "nesting": 1,
      "tag": "p",
      "type": "paragraph_open",
    },
    {
      "attrs": null,
      "block": true,
      "children": [
        {
          "attrs": null,
          "block": false,
          "children": null,
          "content": "",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "",
          "meta": null,
          "nesting": 0,
          "tag": "",
          "type": "text",
        },
        {
          "attrs": [
            [
              "style",
              "margin: 0 0.2em 0.2em 0.2em; transform: scale(1.5); vertical-align: middle;",
            ],
            [
              "type",
              "checkbox",
            ],
            [
              "data-index",
              "0",
            ],
            [
              "disabled",
              "true",
            ],
            [
              "checked",
              "true",
            ],
          ],
          "block": false,
          "checked": true,
          "children": null,
          "content": "",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "",
          "meta": null,
          "nesting": 0,
          "tag": "input",
          "type": "checkbox_input",
        },
        {
          "attrs": null,
          "block": false,
          "children": null,
          "content": " done",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "",
          "meta": null,
          "nesting": 0,
          "tag": "",
          "type": "text",
        },
      ],
      "content": "[x] done",
      "hidden": false,
      "info": "",
      "level": 3,
      "map": [
        6,
        7,
      ],
      "markup": "",
      "meta": null,
      "nesting": 0,
      "tag": "",
      "type": "inline",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": true,
      "info": "",
      "level": 2,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": -1,
      "tag": "p",
      "type": "paragraph_close",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 1,
      "map": null,
      "markup": "-",
      "meta": null,
      "nesting": -1,
      "tag": "li",
      "type": "list_item_close",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 1,
      "map": [
        7,
        9,
      ],
      "markup": "-",
      "meta": null,
      "nesting": 1,
      "tag": "li",
      "type": "list_item_open",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": true,
      "info": "",
      "level": 2,
      "map": [
        7,
        8,
      ],
      "markup": "",
      "meta": null,
      "nesting": 1,
      "tag": "p",
      "type": "paragraph_open",
    },
    {
      "attrs": null,
      "block": true,
      "children": [
        {
          "attrs": null,
          "block": false,
          "children": null,
          "content": "",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "",
          "meta": null,
          "nesting": 0,
          "tag": "",
          "type": "text",
        },
        {
          "attrs": [
            [
              "style",
              "margin: 0 0.2em 0.2em 0.2em; transform: scale(1.5); vertical-align: middle;",
            ],
            [
              "type",
              "checkbox",
            ],
            [
              "data-index",
              "1",
            ],
            [
              "disabled",
              "true",
            ],
          ],
          "block": false,
          "children": null,
          "content": "",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "",
          "meta": null,
          "nesting": 0,
          "tag": "input",
          "type": "checkbox_input",
        },
        {
          "attrs": null,
          "block": false,
          "children": null,
          "content": " next",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "",
          "meta": null,
          "nesting": 0,
          "tag": "",
          "type": "text",
        },
      ],
      "content": "[ ] next",
      "hidden": false,
      "info": "",
      "level": 3,
      "map": [
        7,
        8,
      ],
      "markup": "",
      "meta": null,
      "nesting": 0,
      "tag": "",
      "type": "inline",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": true,
      "info": "",
      "level": 2,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": -1,
      "tag": "p",
      "type": "paragraph_close",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 1,
      "map": null,
      "markup": "-",
      "meta": null,
      "nesting": -1,
      "tag": "li",
      "type": "list_item_close",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": null,
      "markup": "-",
      "meta": null,
      "nesting": -1,
      "tag": "ul",
      "type": "bullet_list_close",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": [
        9,
        10,
      ],
      "markup": "",
      "meta": null,
      "nesting": 1,
      "tag": "p",
      "type": "paragraph_open",
    },
    {
      "attrs": null,
      "block": true,
      "children": [
        {
          "attrs": null,
          "block": false,
          "children": null,
          "content": "topic",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "",
          "meta": null,
          "nesting": 0,
          "tag": "",
          "type": "hashtag",
        },
        {
          "attrs": null,
          "block": false,
          "children": null,
          "content": " ",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "",
          "meta": null,
          "nesting": 0,
          "tag": "",
          "type": "text",
        },
        {
          "attrs": null,
          "block": false,
          "children": null,
          "content": "😄",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "smile",
          "meta": null,
          "nesting": 0,
          "tag": "",
          "type": "emoji",
        },
      ],
      "content": "#topic :smile:",
      "hidden": false,
      "info": "",
      "level": 1,
      "map": [
        9,
        10,
      ],
      "markup": "",
      "meta": null,
      "nesting": 0,
      "tag": "",
      "type": "inline",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": -1,
      "tag": "p",
      "type": "paragraph_close",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": [
        11,
        12,
      ],
      "markup": "",
      "meta": null,
      "nesting": 1,
      "tag": "p",
      "type": "paragraph_open",
    },
    {
      "attrs": null,
      "block": true,
      "children": [
        {
          "attrs": [
            [
              "href",
              "https://example.com",
            ],
            [
              "title",
              "Guide",
            ],
          ],
          "block": false,
          "children": null,
          "content": "",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "",
          "meta": null,
          "nesting": 1,
          "tag": "a",
          "type": "link_open",
        },
        {
          "attrs": null,
          "block": false,
          "children": null,
          "content": "guide",
          "hidden": false,
          "info": "",
          "level": 1,
          "map": null,
          "markup": "",
          "meta": null,
          "nesting": 0,
          "tag": "",
          "type": "text",
        },
        {
          "attrs": null,
          "block": false,
          "children": null,
          "content": "",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "",
          "meta": null,
          "nesting": -1,
          "tag": "a",
          "type": "link_close",
        },
      ],
      "content": "[guide][ref]",
      "hidden": false,
      "info": "",
      "level": 1,
      "map": [
        11,
        12,
      ],
      "markup": "",
      "meta": null,
      "nesting": 0,
      "tag": "",
      "type": "inline",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": -1,
      "tag": "p",
      "type": "paragraph_close",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": [
        12,
        13,
      ],
      "markup": "",
      "meta": null,
      "nesting": 0,
      "tag": "p",
      "type": "blank_line",
    },
  ],
}
`;

exports[`preserves CoCalc parser and HTML output: 1 2`] = `
"<hr>
<h2>title: Demo</h2>
<ol>
<li>Parent
<ul>
<li>child</li>
</ul>
</li>
<li>Next</li>
</ol>
<ul>
<li><input style="margin: 0 0.2em 0.2em 0.2em; transform: scale(1.5); vertical-align: middle;" type="checkbox" data-index="0" disabled="true" checked="true"> done</li>
<li><input style="margin: 0 0.2em 0.2em 0.2em; transform: scale(1.5); vertical-align: middle;" type="checkbox" data-index="1" disabled="true"> next</li>
</ul>
<p><span style="color:#1b95e0;background-color:#fafafa;border:1px solid #d9d9d9;padding:0 7px;border-radius:5px">#topic</span> 😄</p>
<p><a href="https://example.com" title="Guide">guide</a></p>
<p class="cocalc-blank-line" data-source-line="14"><br /></p>"
`;

exports[`preserves CoCalc parser and HTML output: 2 1`] = `
{
  "lines": [
    "| Item | Count |",
    "|:---|---:|",
    "| Tests | 42 |",
    "",
    "\`\`\`python",
    "print(42)  ",
    "\`\`\`",
    "Trailing space ",
    "",
    "",
    "Last",
  ],
  "tokens": [
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": [
        0,
        3,
      ],
      "markup": "",
      "meta": null,
      "nesting": 1,
      "tag": "table",
      "type": "table_open",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 1,
      "map": [
        0,
        1,
      ],
      "markup": "",
      "meta": null,
      "nesting": 1,
      "tag": "thead",
      "type": "thead_open",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 2,
      "map": [
        0,
        1,
      ],
      "markup": "",
      "meta": null,
      "nesting": 1,
      "tag": "tr",
      "type": "tr_open",
    },
    {
      "attrs": [
        [
          "style",
          "text-align:left",
        ],
      ],
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 3,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": 1,
      "tag": "th",
      "type": "th_open",
    },
    {
      "attrs": null,
      "block": true,
      "children": [
        {
          "attrs": null,
          "block": false,
          "children": null,
          "content": "Item",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "",
          "meta": null,
          "nesting": 0,
          "tag": "",
          "type": "text",
        },
      ],
      "content": "Item",
      "hidden": false,
      "info": "",
      "level": 4,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": 0,
      "tag": "",
      "type": "inline",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 3,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": -1,
      "tag": "th",
      "type": "th_close",
    },
    {
      "attrs": [
        [
          "style",
          "text-align:right",
        ],
      ],
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 3,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": 1,
      "tag": "th",
      "type": "th_open",
    },
    {
      "attrs": null,
      "block": true,
      "children": [
        {
          "attrs": null,
          "block": false,
          "children": null,
          "content": "Count",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "",
          "meta": null,
          "nesting": 0,
          "tag": "",
          "type": "text",
        },
      ],
      "content": "Count",
      "hidden": false,
      "info": "",
      "level": 4,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": 0,
      "tag": "",
      "type": "inline",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 3,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": -1,
      "tag": "th",
      "type": "th_close",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 2,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": -1,
      "tag": "tr",
      "type": "tr_close",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 1,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": -1,
      "tag": "thead",
      "type": "thead_close",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 1,
      "map": [
        2,
        3,
      ],
      "markup": "",
      "meta": null,
      "nesting": 1,
      "tag": "tbody",
      "type": "tbody_open",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 2,
      "map": [
        2,
        3,
      ],
      "markup": "",
      "meta": null,
      "nesting": 1,
      "tag": "tr",
      "type": "tr_open",
    },
    {
      "attrs": [
        [
          "style",
          "text-align:left",
        ],
      ],
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 3,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": 1,
      "tag": "td",
      "type": "td_open",
    },
    {
      "attrs": null,
      "block": true,
      "children": [
        {
          "attrs": null,
          "block": false,
          "children": null,
          "content": "Tests",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "",
          "meta": null,
          "nesting": 0,
          "tag": "",
          "type": "text",
        },
      ],
      "content": "Tests",
      "hidden": false,
      "info": "",
      "level": 4,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": 0,
      "tag": "",
      "type": "inline",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 3,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": -1,
      "tag": "td",
      "type": "td_close",
    },
    {
      "attrs": [
        [
          "style",
          "text-align:right",
        ],
      ],
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 3,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": 1,
      "tag": "td",
      "type": "td_open",
    },
    {
      "attrs": null,
      "block": true,
      "children": [
        {
          "attrs": null,
          "block": false,
          "children": null,
          "content": "42",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "",
          "meta": null,
          "nesting": 0,
          "tag": "",
          "type": "text",
        },
      ],
      "content": "42",
      "hidden": false,
      "info": "",
      "level": 4,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": 0,
      "tag": "",
      "type": "inline",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 3,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": -1,
      "tag": "td",
      "type": "td_close",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 2,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": -1,
      "tag": "tr",
      "type": "tr_close",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 1,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": -1,
      "tag": "tbody",
      "type": "tbody_close",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": -1,
      "tag": "table",
      "type": "table_close",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "print(42)  
",
      "hidden": false,
      "info": "python",
      "level": 0,
      "map": [
        4,
        7,
      ],
      "markup": "\`\`\`",
      "meta": null,
      "nesting": 0,
      "tag": "code",
      "type": "fence",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": [
        7,
        8,
      ],
      "markup": "",
      "meta": null,
      "nesting": 1,
      "tag": "p",
      "type": "paragraph_open",
    },
    {
      "attrs": null,
      "block": true,
      "children": [
        {
          "attrs": null,
          "block": false,
          "children": null,
          "content": "Trailing space ",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "",
          "meta": null,
          "nesting": 0,
          "tag": "",
          "type": "text",
        },
      ],
      "content": "Trailing space ",
      "hidden": false,
      "info": "",
      "level": 1,
      "map": [
        7,
        8,
      ],
      "markup": "",
      "meta": null,
      "nesting": 0,
      "tag": "",
      "type": "inline",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": -1,
      "tag": "p",
      "type": "paragraph_close",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": [
        9,
        10,
      ],
      "markup": "",
      "meta": null,
      "nesting": 0,
      "tag": "p",
      "type": "blank_line",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": [
        10,
        11,
      ],
      "markup": "",
      "meta": null,
      "nesting": 1,
      "tag": "p",
      "type": "paragraph_open",
    },
    {
      "attrs": null,
      "block": true,
      "children": [
        {
          "attrs": null,
          "block": false,
          "children": null,
          "content": "Last",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "",
          "meta": null,
          "nesting": 0,
          "tag": "",
          "type": "text",
        },
      ],
      "content": "Last",
      "hidden": false,
      "info": "",
      "level": 1,
      "map": [
        10,
        11,
      ],
      "markup": "",
      "meta": null,
      "nesting": 0,
      "tag": "",
      "type": "inline",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": -1,
      "tag": "p",
      "type": "paragraph_close",
    },
  ],
}
`;

exports[`preserves CoCalc parser and HTML output: 2 2`] = `
"<table>
<thead>
<tr>
<th style="text-align:left">Item</th>
<th style="text-align:right">Count</th>
</tr>
</thead>
<tbody>
<tr>
<td style="text-align:left">Tests</td>
<td style="text-align:right">42</td>
</tr>
</tbody>
</table>
<pre><code class="language-python">print(42)  
</code></pre>
<p>Trailing space</p>
<p class="cocalc-blank-line" data-source-line="10"><br /></p><p>Last</p>
"
`;

exports[`preserves CoCalc parser and HTML output: 3 1`] = `
{
  "lines": [
    "<details><summary>More</summary>",
    "",
    "**Details**",
    "",
    "</details>",
    "",
    "<span class="user-mention" account-id="47d0393e-4814-4452-bb6c-35bac4cbd314">@Bella</span>",
    "",
    "![plot](plot.png)",
    "",
    "<div>raw HTML</div>",
  ],
  "tokens": [
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "<details><summary>More</summary>
",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": [
        0,
        1,
      ],
      "markup": "",
      "meta": null,
      "nesting": 0,
      "tag": "",
      "type": "html_block",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": [
        2,
        3,
      ],
      "markup": "",
      "meta": null,
      "nesting": 1,
      "tag": "p",
      "type": "paragraph_open",
    },
    {
      "attrs": null,
      "block": true,
      "children": [
        {
          "attrs": null,
          "block": false,
          "children": null,
          "content": "",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "",
          "meta": null,
          "nesting": 0,
          "tag": "",
          "type": "text",
        },
        {
          "attrs": null,
          "block": false,
          "children": null,
          "content": "",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "**",
          "meta": null,
          "nesting": 1,
          "tag": "strong",
          "type": "strong_open",
        },
        {
          "attrs": null,
          "block": false,
          "children": null,
          "content": "Details",
          "hidden": false,
          "info": "",
          "level": 1,
          "map": null,
          "markup": "",
          "meta": null,
          "nesting": 0,
          "tag": "",
          "type": "text",
        },
        {
          "attrs": null,
          "block": false,
          "children": null,
          "content": "",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "**",
          "meta": null,
          "nesting": -1,
          "tag": "strong",
          "type": "strong_close",
        },
        {
          "attrs": null,
          "block": false,
          "children": null,
          "content": "",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "",
          "meta": null,
          "nesting": 0,
          "tag": "",
          "type": "text",
        },
      ],
      "content": "**Details**",
      "hidden": false,
      "info": "",
      "level": 1,
      "map": [
        2,
        3,
      ],
      "markup": "",
      "meta": null,
      "nesting": 0,
      "tag": "",
      "type": "inline",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": -1,
      "tag": "p",
      "type": "paragraph_close",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "</details>
",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": [
        4,
        5,
      ],
      "markup": "",
      "meta": null,
      "nesting": 0,
      "tag": "",
      "type": "html_block",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": [
        6,
        7,
      ],
      "markup": "",
      "meta": null,
      "nesting": 1,
      "tag": "p",
      "type": "paragraph_open",
    },
    {
      "attrs": null,
      "block": true,
      "children": [
        {
          "account_id": ""47d0393e-4814-4452-bb6c-35bac4cbd31",
          "attrs": null,
          "block": false,
          "children": null,
          "content": "",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "",
          "meta": null,
          "name": "Bella",
          "nesting": 0,
          "tag": "",
          "type": "mention",
        },
      ],
      "content": "<span class="user-mention" account-id="47d0393e-4814-4452-bb6c-35bac4cbd314">@Bella</span>",
      "hidden": false,
      "info": "",
      "level": 1,
      "map": [
        6,
        7,
      ],
      "markup": "",
      "meta": null,
      "nesting": 0,
      "tag": "",
      "type": "inline",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": -1,
      "tag": "p",
      "type": "paragraph_close",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": [
        8,
        9,
      ],
      "markup": "",
      "meta": null,
      "nesting": 1,
      "tag": "p",
      "type": "paragraph_open",
    },
    {
      "attrs": null,
      "block": true,
      "children": [
        {
          "attrs": [
            [
              "src",
              "plot.png",
            ],
            [
              "alt",
              "",
            ],
          ],
          "block": false,
          "children": [
            {
              "attrs": null,
              "block": false,
              "children": null,
              "content": "plot",
              "hidden": false,
              "info": "",
              "level": 0,
              "map": null,
              "markup": "",
              "meta": null,
              "nesting": 0,
              "tag": "",
              "type": "text",
            },
          ],
          "content": "plot",
          "hidden": false,
          "info": "",
          "level": 0,
          "map": null,
          "markup": "",
          "meta": null,
          "nesting": 0,
          "tag": "img",
          "type": "image",
        },
      ],
      "content": "![plot](plot.png)",
      "hidden": false,
      "info": "",
      "level": 1,
      "map": [
        8,
        9,
      ],
      "markup": "",
      "meta": null,
      "nesting": 0,
      "tag": "",
      "type": "inline",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": null,
      "markup": "",
      "meta": null,
      "nesting": -1,
      "tag": "p",
      "type": "paragraph_close",
    },
    {
      "attrs": null,
      "block": true,
      "children": null,
      "content": "<div>raw HTML</div>",
      "hidden": false,
      "info": "",
      "level": 0,
      "map": [
        10,
        11,
      ],
      "markup": "",
      "meta": null,
      "nesting": 0,
      "tag": "",
      "type": "html_block",
    },
  ],
}
`;

exports[`preserves CoCalc parser and HTML output: 3 2`] = `
"<details><summary>More</summary>
<p><strong>Details</strong></p>
</details>
<p><span class="user-mention">@Bella</span></p>
<p><img src="plot.png" alt="plot"></p>
<div>raw HTML</div>"
`;
